--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-nav-bar></app-nav-bar>
-
-<h2>Hoşgeldiniz E-Ticaret Sitemize </h2>
+<div class="container" style="margin-top: 100px;">
+<app-shop></app-shop>
+</div>
