--- a/client/src/app/core/nav-bar/nav-bar.component.css
+++ b/client/src/app/core/nav-bar/nav-bar.component.css
@@ -10,3 +10,17 @@
     top: -10px;
     left: 15px;
 }
+a{
+    text-decoration: none;
+    color: #343a40;
+
+}
+a.active{
+    color:orange;
+}
+.logo{
+    cursor: pointer;
+}
+/* .logo:focus{
+    outline: none;
+} */
