--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,9 +1,9 @@
   <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom shadow-sm fixed-top">
-    <img src="/assets/images/logo.png" style="max-height:70px;;" alt="logo">
+    <img src="/assets/images/logo.png" style="max-height:70px;;" alt="logo" [routerLink]="['/']" class="logo">
     <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto text-uppercase" style="font: size larger;">
-      <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Home</a>
-      <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Shop</a>
-      <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Contact</a>
+      <a class="me-3 py-2 " [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
+      <a class="me-3 py-2 " routerLink="/shop" routerLinkActive="active">Shop</a>
+      <a class="me-3 py-2 " [routerLink]="['/']" >Contact</a>
     </nav>
     <div class="d-flex align-items-center">
         <a class="position-relative">
