--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -1,13 +1,13 @@
 <div class="card h-100 shadow-sm">
     <img src="{{product?.pictureUrl}}" alt="{{product?.pictureUrl}}"class="img-fluid bg-info">
     <div class="card-body d-flex flex-column">
-        <a href="#" class="product-text">
+        <a routerLink="/shop/{{product?.id}}" class="product-text">
             <p class="card-text text-uppercase">{{product?.name}}</p>     
         </a>
         <span class="mb-2">{{product?.price | currency}}</span>
         <div class="btn-group mt-auto">
           <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart mr-2"></button>
-          <button type="button" class="btn btn-outline-secondary">View</button>
+          <button routerLink="/shop/{{product?.id}}" type="button" class="btn btn-outline-secondary">View</button>
         </div>
       </div>
   </div>
