--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -10,7 +10,7 @@
             <h5 class="text-warning ml-3">Brands</h5>
           <ul class="list-group my-3">
               <li class="list-group-item"style="cursor:pointer"  *ngFor="let brand of brands" aria-current="true"
-              [class.active]="brand.id==this.brandIdSelected"
+              [class.active]="brand.id==this.shopParams.brandId"
               [value]="brand.id"
               (click)="onBrandSelected(brand.id)"
               >
@@ -20,7 +20,7 @@
           <h5 class="text-warning ml-3">Types</h5>
           <ul class="list-group my-3">
               <li class="list-group-item"style="cursor:pointer" *ngFor="let type of types" aria-current="true"
-              [class.active]="type.id==this.typeIdSelected"
+              [class.active]="type.id==this.shopParams.brandId"
               [value]="type.id"
               (click)="onBrandSelected(type.id)"
               >
@@ -31,19 +31,31 @@
         </section>
         <section class="col-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
-                <header>
-                    <span>Showing <strong>10</strong> of <strong> 18 </strong> Result </span>
-                </header>
+           <app-paging-header 
+           [totalCount]="totalCount"
+           [pageSize]="this.shopParams.pageSize"
+           [pageNumber]="this.shopParams.pageNumber">
+          
+           </app-paging-header>
                 <div class="form-inline md-form mr-auto mb-4">
-                   <input class="form-control" style="width: 300px;"placeholder="Search"type="text">
-                   <button class="btn btn-outline-primary mr-2 my-2">Search</button>
-                   <button class="btn btn-outline-success ml-2 my-2">Reset</button>
+                   <input (keyup.enter)="onSearch()" class="form-control" style="width: 300px;" #search  placeholder="Search"type="text">
+                   <button (click)="onSearch()" class="btn btn-outline-primary mr-2 my-2">Search</button>
+                   <button (click)="onReset()" class="btn btn-outline-success ml-2 my-2">Reset</button>
                 </div>
             </div>
             <div class="row">
                 <div class="col-3 mb-4"*ngFor="let item of products">
                      <app-product-item [product]="item"></app-product-item>
                 </div>
+            </div>
+            <div class="d-flex justify-content-center"*ngIf="this.totalCount>0">
+                <app-pager
+                [pageSize]="shopParams.pageSize"
+                [totalCount]="totalCount"
+                (pageChanged)="onPageChange($event)"
+                >
+
+                </app-pager>
             </div>
         </section>
     </div>
