--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,15 @@
+<ngx-spinner>
+    <div class="spinner-border text-warning" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-border text-danger" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+   
+</ngx-spinner>
 <app-nav-bar></app-nav-bar>
-<div class="container" style="margin-top: 100px;">
+<app-section-header></app-section-header>
+<div class="container">
 <!-- <app-shop></app-shop> -->
 <router-outlet></router-outlet>
 </div>
