--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,6 +1,8 @@
-  <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom shadow-sm fixed-top">
+
+<div class="d-flex flex-column flex-md-row align-items-center justify-content-between 
+p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
     <img src="/assets/images/logo.png" style="max-height:70px;;" alt="logo" [routerLink]="['/']" class="logo">
-    <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto text-uppercase" style="font: size larger;">
+    <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;">
       <a class="me-3 py-2 " [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
       <a class="me-3 py-2 " routerLink="/shop" routerLinkActive="active">Shop</a>
       <a class="me-3 py-2 " [routerLink]="['/']" >Contact</a>
@@ -16,3 +18,4 @@
   </div>
 
   <!-- d-inline-flex mt-2 mt-md-0 ms-md-auto text-uppercase -->
+
