--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<carousel>
+    <slide>
+        <img src="assets/images/slider.jpg" alt="first slide" style="display: block;width: 100%;">
+    </slide>
+    <slide>
+        <img src="assets/images/slider2.jpg" alt="first slide" style="display: block;width: 100%;">
+    </slide>
+    <slide>
+        <img src="assets/images/slider3.jpg" alt="first slide" style="display: block;width: 100%;">
+    </slide>
+</carousel>
+<div class="featured">
+<div class="d-flex justify-content-center pt-4">
+<h1>Welcome to Angular E- Commerce</h1>
+</div>
+</div>
