--- a/client/src/app/shared/components/pager/pager.component.html
+++ b/client/src/app/shared/components/pager/pager.component.html
@@ -1,7 +1,8 @@
-<pagination [boundaryLinks]="true" 
-[totalItems]="this.totalCount"
-(pageChanged)="onPagerChanged($event)"
-[itemsPerPage]="this.pageSize"
+<pagination
+ [boundaryLinks]="true" 
+ [totalItems]="totalCount"
+ (pageChanged)="onPagerChanged($event)"
+ [itemsPerPage]="pageSize"
  previousText="&lsaquo;"
  nextText="&rsaquo;"
  firstText="&laquo;" 
