--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <section class="col-3">
 
@@ -20,9 +20,9 @@
           <h5 class="text-warning ml-3">Types</h5>
           <ul class="list-group my-3">
               <li class="list-group-item"style="cursor:pointer" *ngFor="let type of types" aria-current="true"
-              [class.active]="type.id==this.shopParams.brandId"
+              [class.active]="type.id==this.shopParams.typeId"
               [value]="type.id"
-              (click)="onBrandSelected(type.id)"
+              (click)="onTypeSelected(type.id)"
               >
                 {{type.name}}
             </li>
@@ -31,12 +31,11 @@
         </section>
         <section class="col-9">
             <div class="d-flex justify-content-between align-items-center pb-2">
-           <app-paging-header 
-           [totalCount]="totalCount"
-           [pageSize]="this.shopParams.pageSize"
-           [pageNumber]="this.shopParams.pageNumber">
-          
-           </app-paging-header>
+                <app-paging-header  
+                [totalCount]="totalCount"
+                [pageSize] ="this.shopParams.pageSize"
+                [pageNumber] ="this.shopParams.pageNumber">
+                </app-paging-header>
                 <div class="form-inline md-form mr-auto mb-4">
                    <input (keyup.enter)="onSearch()" class="form-control" style="width: 300px;" #search  placeholder="Search"type="text">
                    <button (click)="onSearch()" class="btn btn-outline-primary mr-2 my-2">Search</button>
@@ -48,13 +47,11 @@
                      <app-product-item [product]="item"></app-product-item>
                 </div>
             </div>
-            <div class="d-flex justify-content-center"*ngIf="this.totalCount>0">
+            <div class="d-flex justify-content-center"*ngIf="totalCount>0">
                 <app-pager
                 [pageSize]="shopParams.pageSize"
                 [totalCount]="totalCount"
-                (pageChanged)="onPageChange($event)"
-                >
-
+                (pageChanged)="onPageChanged($event)">
                 </app-pager>
             </div>
         </section>
