--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ngx-spinner>
+<ngx-spinner type="pacman">
     <div class="spinner-border text-warning" role="status">
         <span class="visually-hidden">Loading...</span>
       </div>
