--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -8,9 +8,9 @@ p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
       <a class="me-3 py-2 " [routerLink]="['/']" >Contact</a>
     </nav>
     <div class="d-flex align-items-center">
-        <a class="position-relative">
+        <a routerLink="/basket" class="position-relative">
             <i class="fa fa-shopping-cart fa-2x me-3 mr-5 text-dark"></i>
-            <div class="cart-no">5</div>
+            <div *ngIf="(basket$|async) as basket" class="cart-no">{{basket.items.length}}</div>
         </a>
         <a href="#" class="me-2 mt-1 btn btn-outline-secondary">Login</a>
         <a href="#" class="me-3 mt-1 btn btn-outline-secondary mr-3">Sign Up</a>
