--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -1,21 +1,63 @@
-
-<div class="d-flex flex-column flex-md-row align-items-center justify-content-between 
-p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top">
-    <img src="/assets/images/logo.png" style="max-height:70px;;" alt="logo" [routerLink]="['/']" class="logo">
-    <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;">
-      <a class="me-3 py-2 " [routerLink]="['/']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
-      <a class="me-3 py-2 " routerLink="/shop" routerLinkActive="active">Shop</a>
-      <a class="me-3 py-2 " [routerLink]="['/']" >Contact</a>
-    </nav>
-    <div class="d-flex align-items-center">
-        <a routerLink="/basket" class="position-relative">
-            <i class="fa fa-shopping-cart fa-2x me-3 mr-5 text-dark"></i>
-            <div *ngIf="(basket$|async) as basket" class="cart-no">{{basket.items.length}}</div>
+<div
+  class="d-flex flex-column flex-md-row align-items-center justify-content-between p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm fixed-top"
+>
+  <img
+    src="/assets/images/logo.png"
+    style="max-height: 70px"
+    alt="logo"
+    [routerLink]="['/']"
+    class="logo"
+  />
+  <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger">
+    <a
+      class="me-3 py-2"
+      [routerLink]="['/']"
+      routerLinkActive="active"
+      [routerLinkActiveOptions]="{ exact: true }"
+      >Home</a
+    >
+    <a class="me-3 py-2" routerLink="/shop" routerLinkActive="active">Shop</a>
+    <a class="me-3 py-2" [routerLink]="['/']">Contact</a>
+  </nav>
+  <div class="d-flex align-items-center">
+    <a routerLink="/basket" class="position-relative">
+      <i class="fa fa-shopping-cart fa-2x me-3 mr-5 text-dark"></i>
+      <div *ngIf="basket$ | async" class="cart-no">{{ (basket$ | async).items.length }}</div>
+    </a>
+    <ng-container *ngIf="(currentUser$ | async) === null">
+      <a routerLink="/account/login" class="me-2 mt-1 btn btn-outline-secondary"
+        >Login</a
+      >
+      <a
+        routerLink="/account/register"
+        class="me-3 mt-1 btn btn-outline-secondary mr-3"
+        >Sign Up</a
+      >
+    </ng-container>
+    <ng-container *ngIf="currentUser$ | async">
+      <div class="dropdown ml-3 mr-5" dropdown>
+        <a class="dropdown-toggle" style="cursor: pointer" dropdownToggle>
+          <strong>Welcome {{(currentUser$ | async).displayName}}</strong>
         </a>
-        <a href="#" class="me-2 mt-1 btn btn-outline-secondary">Login</a>
-        <a href="#" class="me-3 mt-1 btn btn-outline-secondary mr-3">Sign Up</a>
-    </div>
+        <div
+          class="dropdown-menu dropdown-menu-right"
+          style="cursor: pointer"
+          *dropdownMenu
+        >
+          <a routerLink="/basket" class="dropdown-item d-flex align-items-center py-2">
+            <i class="fa fa-shopping-cart mr-3">View Basket</i>
+          </a>
+          <a routerLink="/orders" class="dropdown-item d-flex align-items-center py-2">
+            <i class="fa fa-history mr-3">View Orders</i>
+          </a>
+          <div class="dropdown-divider"></div>
+          <a (click)="logout()" class="dropdown-item d-flex align-items-center py-2">
+            <i class="fa fa-sign-out mr-3">Logout</i>
+          </a>
+        </div>
+      </div>
+    </ng-container>
   </div>
+</div>
 
-  <!-- d-inline-flex mt-2 mt-md-0 ms-md-auto text-uppercase -->
-
+<!-- d-inline-flex mt-2 mt-md-0 ms-md-auto text-uppercase -->
